--- a/app/templates/includes/top-stats.html
+++ b/app/templates/includes/top-stats.html
@@ -9,20 +9,19 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Traffic</h5>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Most Recent Fire</h5>
 
-                      <span id="stats_traffic" class="h2 font-weight-bold mb-0">N/A</span>
+                      <span id="stats_traffic" class="h2 font-weight-bold mb-0">Coleman Fire</span>
                     
                     </div>
                     <div class="col-auto">
-                      <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                        <i class="fas fa-chart-bar"></i>
+                      <div class="icon icon-shape bg-white text-white rounded-circle ">
+                        <!-- <i class="fas fa-chart-bar"></i> -->
                       </div>
                     </div>
                   </div>
                   <p class="mt-3 mb-0 text-muted text-sm">
-                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                    <span class="text-nowrap">Since last month</span>
+                    <span class="text-nowrap">Oct 18</span>
                   </p>
                 </div>
               </div>
@@ -32,20 +31,20 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Largest Active Fire</h5>
 
-                      <span id="stats_users" class="h2 font-weight-bold mb-0">N/A</span>
+                      <span id="stats_users" class="h2 font-weight-bold mb-0">Creek Fire</span>
                     
                     </div>
                     <div class="col-auto">
-                      <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
-                        <i class="fas fa-chart-pie"></i>
+                      <div class="icon icon-shape bg-white text-white rounded-circle ">
+                        <!-- <i class="fas fa-chart-pie"></i> -->
                       </div>
                     </div>
                   </div>
                   <p class="mt-3 mb-0 text-muted text-sm">
-                    <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 3.48%</span>
-                    <span class="text-nowrap">Since last week</span>
+                    <!-- <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 3.48%</span> -->
+                    <span class="text-nowrap">Sept 4</span>
                   </p>
                 </div>
               </div>
@@ -55,20 +54,20 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Most Affected Area</h5>
 
-                      <span id="stats_sales" class="h2 font-weight-bold mb-0">N/A</span>
+                      <span id="stats_sales" class="h2 font-weight-bold mb-0">Fresno County, CA </span>
                     
                     </div>
                     <div class="col-auto">
-                      <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
-                        <i class="fas fa-users"></i>
+                      <div class="icon icon-shape bg-white text-white rounded-circle ">
+                        <!-- <i class="fas fa-users"></i> -->
                       </div>
                     </div>
                   </div>
                   <p class="mt-3 mb-0 text-muted text-sm">
-                    <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>
-                    <span class="text-nowrap">Since yesterday</span>
+                    <!-- <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> </span> -->
+                    <span class="text-nowrap">Burning for 85 Days</span>
                   </p>
                 </div>
               </div>
@@ -78,20 +77,20 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Wildfire Severity</h5>
 
-                      <span id="stats_perf" class="h2 font-weight-bold mb-0">N/A</span>
+                      <span id="stats_perf" class="h2 font-weight-bold mb-0">379,895 Acres Burned</span>
                       
                     </div>
                     <div class="col-auto">
-                      <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                        <i class="fas fa-percent"></i>
+                      <div class="icon icon-shape bg-white text-white rounded-circle ">
+                        <!-- <i class="fas fa-percent"></i> -->
                       </div>
                     </div>
                   </div>
                   <p class="mt-3 mb-0 text-muted text-sm">
-                    <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
-                    <span class="text-nowrap">Since last month</span>
+                    <!-- <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span> -->
+                    <span class="text-nowrap">95% Contained</span>
                   </p>
                 </div>
               </div>
