--- a/app/templates/pages/index2019.html
+++ b/app/templates/pages/index2019.html
@@ -32,7 +32,7 @@
                 <div class="col-xl-8">
                   <ul class="nav nav-pills justify-content-end">
                     <li class="nav-item mr-2 mr-md-0">
-                      <a href="{{url_for('index')}}" class="nav-link py-2 px-3 active">
+                      <a href="{{url_for('index')}}" class="nav-link py-2 px-3">
                         <span class="d-none d-md-block">
                           2013
                         </span>
@@ -70,7 +70,7 @@
                       </a>
                     </li>
                     <li class="nav-item" >
-                      <a href="{{url_for('index2019')}}" class="nav-link py-2 px-3">
+                      <a href="{{url_for('index2019')}}" class="nav-link py-2 px-3  active">
                         <span class="d-none d-md-block">2019</span>
                         <span class="d-md-none">W</span>
                       </a>
@@ -84,7 +84,7 @@
               <!-- <div class="chart"> -->
                 <!-- Chart wrapper -->
                 <!-- <canvas id="chart-sales" class="chart-canvas"></canvas> -->
-                <iframe src = "{{ url_for('loadMap', path = '2013.html') }} " width = 1200 height = 600 style = "background-color: transparent;"></iframe>
+                <iframe src = "{{ url_for('loadMap', path = '2019.html') }} " width = 1200 height = 600 style = "background-color: transparent;"></iframe>
 
               <!-- </div> -->
             </div>
@@ -194,13 +194,13 @@
             <div class="card-body" >
               <h2 class="card-title" style="padding: 10px;">Wildfire Severity in California</h4>
               <h4 class="card-text"style="padding: 10px;">
-                Red: 100,000+ acres will be burnt until end of 2020
+                Red: 100,000+ acres will be burnt by the end of 2020
               </h4>
               <h4 class="card-text"style="padding: 10px;">
-                Blue: 20,000 - 100,000 will be burnt until end of 2020
+                Blue: 20,000 - 100,000 will be burnt by the end of 2020
               </h4>
               <h4 class="card-text"style="padding: 10px;">
-                Green:  &lt; 20,000 will be burnt until end of 2020
+                Green:  &lt; 20,000 will be burnt by the end of 2020
               </h4>
 
             </div>
